# Pong

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: entities.h  game.h  states.h
src/: entities.cpp  game.cpp  main.cpp  states.cpp
